@@ -234,4 +234,8 @@ h1#searchmovie_title {padding:20px;}
 input#moviesearched{ width:60%;background-color:lightyellow;}
 span.label_moviesearched{font-size:larger !important;padding:10px;}
 
+/* ---------------------------------------- Loader when searching */
+#lumiere_loader {border: 12px solid #f3f3f3;border-radius: 50%;border-top: 12px solid #444444;width: 70px;height: 70px;animation: spin 1s linear infinite;}
+@keyframes spin {100% {transform: rotate(360deg);}}
+.center {position: absolute;top: 0;bottom: 0;left: 0;right: 0;margin: auto;}
 
