@@ -2,7 +2,8 @@ Changelog
 
 v.3.2.3
 * [minor] Limiting the number of results never worked. Now it does. Use the general options -> advanced 
-* [minor] Enhanced popup layout, more fancy and adapted to the theme selected in admin panel
+* [minor] Enhanced popup layout, fancier and more adapted to the theme selected in admin panel
+* [minor] Added loading css to loader ids (used in popup-search and popup-imdb_movie.php)
 * [bug] Taxonomy rewrite rules does definitely work using lumiere_create_taxonomies() function in class/functions.php. Added a specific constraint to be called only in taxonomy pages since it calls the time consuming flush_rewrite_rules() function.
 * [bug] No form for detail cache delete, cache details to delete couldn't be submitted in options-cache.php
 * [bug] Values imdbwidgetofficialSites and imdbwidgetprodCompany prevented them from being saved in options-widget.php. Renamed them imdbwidgetofficialsites and imdbwidgetprodCompany so they can be saved.
